Use pandoc's markdown image link text as short caption in LaTeX
    ![Long caption](figure.jpg "short caption"){#fig:ref}

should produce in LaTeX:

    \begin{figure}[htbp]
    \centering
    \includegraphics{figure.jpg}
    \caption[short caption]{Long caption}
    \label{fig:ref}
    \end{figure}

In addition, this adds the link text to html, html5, and markdown formats.

*Notes*
- I'm not sure why the math is coming out different in my versions of spec.html and spec.html5. That would seem to be unaffected by my changes here.
- I'm not sure how to pretty print json the same way as the original, so my spec.json has too many changes. That should be fixed.

--- a/tests/spec.latex
+++ b/tests/spec.latex
@@ -5,7 +5,7 @@
 \begin{figure}[htbp]
 \centering
 \includegraphics{image.png}
-\caption{a figure that can be referred to (ˈjuːnɪˌkəʊd!)}
+\caption[link text]{a figure that can be referred to (ˈjuːnɪˌkəʊd!)}
 \label{fig:attr}
 \end{figure}
 
@@ -18,14 +18,14 @@ Here is reference to the section called \autoref{sec:expt}.
 \begin{figure}[htbp]
 \centering
 \includegraphics{image.png}
-\caption{another figure that can be referred to (ˈjuːnɪˌkəʊd!)}
+\caption[fig:link text]{another figure that can be referred to (ˈjuːnɪˌkəʊd!)}
 \label{fig:attr2}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics{image.png}
-\caption{figure with no attr (ˈjuːnɪˌkəʊd!)}
+\caption{figure with no attr and no link text (ˈjuːnɪˌkəʊd!)}
 \end{figure}
 
 Here is \autoref{eq:silly}:
@@ -42,7 +42,7 @@ Here is \autoref{eq:silly}:
 \begin{figure}[htbp]
 \centering
 \includegraphics{image.png}
-\caption*{no numbering here (ˈjuːnɪˌkəʊd!)}
+\caption*[link text]{no numbering here (ˈjuːnɪˌkəʊd!)}
 \label{fig:nonum}
 \end{figure}
 
